CNSDEVCOLECT/force-app/main/default/objects/Object_Related_Document__c/Object_Related_Document__c.object-meta.xml
<CustomObject>
    <label>Object Related Document</label>
    <nameField>
        <displayFormat>D-{00000000}</displayFormat>
        <label>Docu Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Object Related Document</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>