CNSDEVCOLECT/force-app/main/default/objects/Object_Related_Document__c/fields/Aprobado__c.field-meta.xml
<CustomField>
    <fullName>Aprobado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que valida si un documento ya fue aprobado y bloquea la picklist</description>
    <label>Documento Aprobado</label>
    <type>Checkbox</type>
</CustomField>