CNSDEVCOLECT/force-app/main/default/objects/Object_Related_Document__c/fields/Caso_Relacionado__c.field-meta.xml
<CustomField>
    <fullName>Caso_Relacionado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caso Relacionado</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Object Related Document</relationshipLabel>
    <relationshipName>Object_Related_Document</relationshipName>
    <type>Lookup</type>
</CustomField>