CNSDEVCOLECT/force-app/main/default/objects/Object_Related_Document__c/fields/Check_Documento__c.field-meta.xml
<CustomField>
    <fullName>Check_Documento__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Documento</label>
    <type>Checkbox</type>
</CustomField>