CNSDEVCOLECT/force-app/main/default/objects/Object_Related_Document__c/fields/Detalle_Documento__c.field-meta.xml
<CustomField>
    <fullName>Detalle_Documento__c</fullName>
    <description>Guarda el detalle del documento adicional solicitado.</description>
    <label>Detalle Documento</label>
    <type>TextArea</type>
</CustomField>