CNSDEVCOLECT/force-app/main/default/objects/Object_Related_Document__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>Concatena el Id del objeto relacionado y el nombre del documento</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>