CNSDEVCOLECT/force-app/main/default/objects/Object_Related_Document__c/fields/Fecha_Carga_Alfresco__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Carga_Alfresco__c</fullName>
    <label>Fecha Carga Alfresco</label>
    <type>Date</type>
</CustomField>