CNSDEVCOLECT/force-app/main/default/objects/Object_Related_Document__c/fields/Id_Alfresco__c.field-meta.xml
<CustomField>
    <fullName>Id_Alfresco__c</fullName>
    <description>Id documento cargado en Alfresco</description>
    <externalId>true</externalId>
    <label>Id Alfresco</label>
    <length>255</length>
    <type>Text</type>
</CustomField>