CNSDEVCOLECT/force-app/main/default/objects/Object_Related_Document__c/fields/Id_Doc_Attachment__c.field-meta.xml
<CustomField>
    <fullName>Id_Doc_Attachment__c</fullName>
    <label>Id Doc Attachment</label>
    <length>150</length>
    <type>Text</type>
</CustomField>