CNSDEVCOLECT/force-app/main/default/objects/Object_Related_Document__c/fields/Motivo_Rechazo__c.field-meta.xml
<CustomField>
    <fullName>Motivo_Rechazo__c</fullName>
    <description>Campo para almacenar el motivo por el cual se rechazo un documento en la oportunidad</description>
    <label>Motivo de Rechazo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Documento No Corresponde</fullName>
            </value>
            <value>
                <fullName>Documento Ilegible</fullName>
            </value>
            <value>
                <fullName>Documento Incompleto</fullName>
            </value>
            <value>
                <fullName>Expirado</fullName>
                <isActive>false</isActive>
                <label>Expirado</label>
            </value>
            <value>
                <fullName>No Legible</fullName>
                <isActive>false</isActive>
                <label>No Legible</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>