CNSDEVCOLECT/force-app/main/default/objects/Object_Related_Document__c/fields/Orden_Documento__c.field-meta.xml
<CustomField>
    <fullName>Orden_Documento__c</fullName>
    <label>Orden Documento</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>