CNSDEVCOLECT/force-app/main/default/objects/Object_Related_Document__c/fields/Tipo_Documento__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Documento__c</fullName>
    <description>Campo para almacenar los tipos de documentos que se solicitan en recopilación para hipotecario.</description>
    <label>Tipo de Documento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>